@@ -1,3 +1,8 @@
+2014-08-12  Junichi Satoh <junichi@rworks.jp>
+
+	* lib/PandoraFMS/Core.pm, lib/PandoraFMS/DataServer.pm: Fixed sql
+	error with MySQL 5.6 and its default sql_mode.
+
 2014-08-11 Hirofumi Kosaka <kosaka@rworks.jp>
 
 	* lib/PandoraFMS/Core.pm: Fixed modules would have ignored
